tests/baselines/reference/externalModuleImmutableBindings(strict=true).errors.txt
f2.ts(6,7): error TS2540: Cannot assign to 'x' because it is a read-only property.
f2.ts(7,7): error TS2540: Cannot assign to 'x' because it is a read-only property.
f2.ts(8,7): error TS2339: Property 'blah' does not exist on type 'typeof import("f1")'.
f2.ts(9,1): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type 'typeof import("f1")'.
  No index signature with a parameter of type 'string' was found on type 'typeof import("f1")'.
f2.ts(11,7): error TS2540: Cannot assign to 'x' because it is a read-only property.
f2.ts(12,7): error TS2540: Cannot assign to 'x' because it is a read-only property.
f2.ts(13,1): error TS7053: Element implicitly has an 'any' type because expression of type '"blah"' can't be used to index type 'typeof import("f1")'.
  Property 'blah' does not exist on type 'typeof import("f1")'.
f2.ts(14,1): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type 'typeof import("f1")'.
  No index signature with a parameter of type 'string' was found on type 'typeof import("f1")'.
f2.ts(16,8): error TS2540: Cannot assign to 'x' because it is a read-only property.
f2.ts(17,8): error TS2540: Cannot assign to 'x' because it is a read-only property.
f2.ts(18,8): error TS2339: Property 'blah' does not exist on type 'typeof import("f1")'.
f2.ts(19,2): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type 'typeof import("f1")'.
  No index signature with a parameter of type 'string' was found on type 'typeof import("f1")'.
f2.ts(21,8): error TS2540: Cannot assign to 'x' because it is a read-only property.
f2.ts(22,8): error TS2540: Cannot assign to 'x' because it is a read-only property.
f2.ts(23,2): error TS7053: Element implicitly has an 'any' type because expression of type '"blah"' can't be used to index type 'typeof import("f1")'.
  Property 'blah' does not exist on type 'typeof import("f1")'.
f2.ts(24,2): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type 'typeof import("f1")'.
  No index signature with a parameter of type 'string' was found on type 'typeof import("f1")'.
f2.ts(26,12): error TS2540: Cannot assign to 'x' because it is a read-only property.
f2.ts(27,12): error TS2540: Cannot assign to 'x' because it is a read-only property.
f2.ts(28,12): error TS2540: Cannot assign to 'x' because it is a read-only property.
f2.ts(29,12): error TS2540: Cannot assign to 'x' because it is a read-only property.
f2.ts(30,12): error TS2339: Property 'blah' does not exist on type 'typeof import("f1")'.
f2.ts(31,12): error TS2339: Property 'blah' does not exist on type 'typeof import("f1")'.
f2.ts(32,6): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type 'typeof import("f1")'.
  No index signature with a parameter of type 'string' was found on type 'typeof import("f1")'.
f2.ts(33,6): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type 'typeof import("f1")'.
  No index signature with a parameter of type 'string' was found on type 'typeof import("f1")'.
f2.ts(35,13): error TS2540: Cannot assign to 'x' because it is a read-only property.
f2.ts(36,13): error TS2540: Cannot assign to 'x' because it is a read-only property.
f2.ts(37,13): error TS2540: Cannot assign to 'x' because it is a read-only property.
f2.ts(38,13): error TS2540: Cannot assign to 'x' because it is a read-only property.
f2.ts(39,13): error TS2339: Property 'blah' does not exist on type 'typeof import("f1")'.
f2.ts(40,13): error TS2339: Property 'blah' does not exist on type 'typeof import("f1")'.
f2.ts(41,7): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type 'typeof import("f1")'.
  No index signature with a parameter of type 'string' was found on type 'typeof import("f1")'.
f2.ts(42,7): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type 'typeof import("f1")'.
  No index signature with a parameter of type 'string' was found on type 'typeof import("f1")'.


==== f1.ts (0 errors) ====
    export var x = 1;
    
==== f2.ts (32 errors) ====
    // all mutations below are illegal and should be fixed
    import * as stuff from './f1';
    
    var n = 'baz';
    
    stuff.x = 0;
          ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    stuff['x'] = 1;
          ~~~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    stuff.blah = 2;
          ~~~~
!!! error TS2339: Property 'blah' does not exist on type 'typeof import("f1")'.
    stuff[n] = 3;
    ~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type 'typeof import("f1")'.
!!! error TS7053:   No index signature with a parameter of type 'string' was found on type 'typeof import("f1")'.
    
    stuff.x++;
          ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    stuff['x']++;
          ~~~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    stuff['blah']++;
    ~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"blah"' can't be used to index type 'typeof import("f1")'.
!!! error TS7053:   Property 'blah' does not exist on type 'typeof import("f1")'.
    stuff[n]++;
    ~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type 'typeof import("f1")'.
!!! error TS7053:   No index signature with a parameter of type 'string' was found on type 'typeof import("f1")'.
    
    (stuff.x) = 0;
           ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    (stuff['x']) = 1;
           ~~~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    (stuff.blah) = 2;
           ~~~~
!!! error TS2339: Property 'blah' does not exist on type 'typeof import("f1")'.
    (stuff[n]) = 3;
     ~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type 'typeof import("f1")'.
!!! error TS7053:   No index signature with a parameter of type 'string' was found on type 'typeof import("f1")'.
    
    (stuff.x)++;
           ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    (stuff['x'])++;
           ~~~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    (stuff['blah'])++;
     ~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"blah"' can't be used to index type 'typeof import("f1")'.
!!! error TS7053:   Property 'blah' does not exist on type 'typeof import("f1")'.
    (stuff[n])++;
     ~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type 'typeof import("f1")'.
!!! error TS7053:   No index signature with a parameter of type 'string' was found on type 'typeof import("f1")'.
    
    for (stuff.x in []) {}
               ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    for (stuff.x of []) {}
               ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    for (stuff['x'] in []) {}
               ~~~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    for (stuff['x'] of []) {}
               ~~~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    for (stuff.blah in []) {}
               ~~~~
!!! error TS2339: Property 'blah' does not exist on type 'typeof import("f1")'.
    for (stuff.blah of []) {}
               ~~~~
!!! error TS2339: Property 'blah' does not exist on type 'typeof import("f1")'.
    for (stuff[n] in []) {}
         ~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type 'typeof import("f1")'.
!!! error TS7053:   No index signature with a parameter of type 'string' was found on type 'typeof import("f1")'.
    for (stuff[n] of []) {}
         ~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type 'typeof import("f1")'.
!!! error TS7053:   No index signature with a parameter of type 'string' was found on type 'typeof import("f1")'.
    
    for ((stuff.x) in []) {}
                ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    for ((stuff.x) of []) {}
                ~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    for ((stuff['x']) in []) {}
                ~~~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    for ((stuff['x']) of []) {}
                ~~~
!!! error TS2540: Cannot assign to 'x' because it is a read-only property.
    for ((stuff.blah) in []) {}
                ~~~~
!!! error TS2339: Property 'blah' does not exist on type 'typeof import("f1")'.
    for ((stuff.blah) of []) {}
                ~~~~
!!! error TS2339: Property 'blah' does not exist on type 'typeof import("f1")'.
    for ((stuff[n]) in []) {}
          ~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type 'typeof import("f1")'.
!!! error TS7053:   No index signature with a parameter of type 'string' was found on type 'typeof import("f1")'.
    for ((stuff[n]) of []) {}
          ~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type 'typeof import("f1")'.
!!! error TS7053:   No index signature with a parameter of type 'string' was found on type 'typeof import("f1")'.
    
    
    